sofia-pro font bug fixing  process #4

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/sofia-pro?styles=17636');
+@import url('https://fonts.cdnfonts.com/css/sofia-pro?styles=17636');
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap");
 
 @tailwind base;
